[gd_scene load_steps=8 format=3 uid="uid://bwv7j8fi7g6ou"]

[ext_resource type="Script" path="res://Maps/Temple/TempleParts/temple_room_2.gd" id="1_md4k6"]
[ext_resource type="PackedScene" uid="uid://bp8m2bb83u650" path="res://Maps/Temple/TempleParts/Wall_1.tscn" id="2_j7yut"]
[ext_resource type="PackedScene" uid="uid://dqpqj1to1co5f" path="res://Maps/Temple/TempleParts/Wall_2.tscn" id="3_0ym2a"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jh1tx"]
size = Vector3(2.51831, 1, 1.99095)

[sub_resource type="BoxShape3D" id="BoxShape3D_wjtyp"]
size = Vector3(1.297, 1.873, 8.45754)

[sub_resource type="BoxShape3D" id="BoxShape3D_clnsb"]
size = Vector3(1.37158, 3.08875, 8.60393)

[sub_resource type="BoxShape3D" id="BoxShape3D_1nc3b"]
size = Vector3(1.29694, 1.87317, 7.18626)

[node name="DestroyedTempleRoom2" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0162319, 0.0309987, 24.0665)
script = ExtResource("1_md4k6")

[node name="Walls" type="Node3D" parent="."]

[node name="wall_without_crack13" parent="Walls" instance=ExtResource("2_j7yut")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 6.50694, 0, 36.7413)

[node name="wall_without_crack12" parent="Walls" instance=ExtResource("2_j7yut")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 6.51069, 0, 30.262)

[node name="wall_without_crack2" parent="Walls" instance=ExtResource("2_j7yut")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 6.50113, 0, 12.112)

[node name="wall_without_crack4" parent="Walls" instance=ExtResource("2_j7yut")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 6.50938, 0, 15.748)

[node name="wall_without_crack7" parent="Walls" instance=ExtResource("2_j7yut")]
transform = Transform3D(-2.14673e-08, 0, 1, 0, 1, 0, -0.491114, 0, -4.37114e-08, 6.51754, 0, 19.2718)

[node name="wall_without_crack14" parent="Walls" instance=ExtResource("2_j7yut")]
transform = Transform3D(-1.14925e-07, 0, 0.997393, 0, 2.09772, 0, -2.62917, 0, -4.35975e-08, 6.53079, -2.99833, 21.6417)

[node name="WallLeft" type="Node3D" parent="Walls"]

[node name="wall_left_1" parent="Walls/WallLeft" instance=ExtResource("2_j7yut")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.87604, 0, 12.1346)

[node name="wall_left_2" parent="Walls/WallLeft" instance=ExtResource("2_j7yut")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.86803, 0, 15.6624)

[node name="wall_left_3" parent="Walls/WallLeft" instance=ExtResource("2_j7yut")]
transform = Transform3D(-2.40816e-08, 0, 1.00202, 0, 1.00202, 0, -0.550924, 0, -4.37998e-08, -2.86001, 0, 19.1951)

[node name="WallMiddle" type="Node3D" parent="Walls"]

[node name="wall_middle" parent="Walls/WallMiddle" instance=ExtResource("2_j7yut")]
transform = Transform3D(-1.05856e-07, 0, 1, 0, 2.1032, 0, -2.42169, 0, -4.37114e-08, -2.84931, -3.05921, 21.8041)

[node name="WallRight" type="Node3D" parent="Walls"]

[node name="wall_right_1" parent="Walls/WallRight" instance=ExtResource("3_0ym2a")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.859, 0, 33.737)

[node name="wall_right_2" parent="Walls/WallRight" instance=ExtResource("3_0ym2a")]
transform = Transform3D(-5.92058e-07, 0, -1, 0, 1, 0, 1, 0, -5.92058e-07, -2.85852, 0, 32.8185)

[node name="Pillars" type="Node3D" parent="."]

[node name="Ground" type="Node3D" parent="."]

[node name="wall_with_crack" parent="Ground" instance=ExtResource("3_0ym2a")]
transform = Transform3D(-1.0253e-07, 3.48165, -1.74863e-07, 0, -1.52188e-07, -4.0004, -2.34563, -1.52188e-07, 7.64351e-15, -2.55242, -2.13179, 13.1868)

[node name="wall_without_crack2" parent="Ground" instance=ExtResource("2_j7yut")]
transform = Transform3D(2.84617, 0, 0, 0, 0.0471507, 2.82855, 0, -3.92527, 0.0154437, 6.00015, -5.12785, 30.4649)

[node name="wall_without_crack" parent="Ground" instance=ExtResource("2_j7yut")]
transform = Transform3D(2.71292, 0, 0, 0, -1.36723e-07, -4.63942, 0, 3.12785, -2.02796e-07, 5.74883, -2.47603, 30.6988)

[node name="BrokenPlatform" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.999464, 0.032754, 0, -0.032754, 0.999464, 3, -3.56946, 25.1751)

[node name="wall_without_crack" parent="BrokenPlatform" instance=ExtResource("2_j7yut")]
transform = Transform3D(0.8, 0, 0, 0, -3.49691e-08, -0.8, 0, 0.8, -3.49691e-08, 0, 0, 0)

[node name="Area3D" type="Area3D" parent="BrokenPlatform"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.125557, 0.656502, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="BrokenPlatform/Area3D"]
transform = Transform3D(1.07978, 0, 0, 0, 1.07978, 0, 0, 0, 1.07978, -1.02803, 0, 0.858765)
shape = SubResource("BoxShape3D_jh1tx")

[node name="HideLeft" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.48572, 0.466577, 19.4574)

[node name="Box" type="CollisionShape3D" parent="HideLeft"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.148468, 0.436584, -2.58103)
shape = SubResource("BoxShape3D_wjtyp")

[node name="HideMiddle" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.48572, 0.466577, 25.7666)

[node name="Box" type="CollisionShape3D" parent="HideMiddle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.334259, 0.920654, -0.347557)
shape = SubResource("BoxShape3D_clnsb")

[node name="HideRight" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.48572, 0.466577, 33.4296)

[node name="Box" type="CollisionShape3D" parent="HideRight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.148468, 0.436584, -0.099823)
shape = SubResource("BoxShape3D_1nc3b")

[connection signal="body_entered" from="BrokenPlatform/Area3D" to="BrokenPlatform" method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="BrokenPlatform/Area3D" to="BrokenPlatform" method="_on_area_3d_body_exited"]
[connection signal="body_entered" from="HideLeft" to="." method="_on_hide_left_body_entered"]
[connection signal="body_exited" from="HideLeft" to="." method="_on_hide_left_body_exited"]
[connection signal="body_entered" from="HideMiddle" to="." method="_on_hide_middle_body_entered"]
[connection signal="body_exited" from="HideMiddle" to="." method="_on_hide_middle_body_exited"]
[connection signal="body_entered" from="HideRight" to="." method="_on_hide_right_body_entered"]
[connection signal="body_exited" from="HideRight" to="." method="_on_hide_right_body_exited"]
